k8s/entertainment/calibre/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
  namespace: entertainment
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: calibre
  template:
    metadata:
      labels:
        app: calibre
    spec:
      volumes:
        - name: calibre-config
          persistentVolumeClaim:
            claimName: calibre-config
        - name: calibre-ingest
          nfs:
            server: 10.0.3.1
            path: /mnt/jabberwock/cwa-book-ingest
        - name: entertainment-content
          persistentVolumeClaim:
            claimName: entertainment-content-pvc
        - name: litestream-configmap
          configMap:
            name: calibre-litestream
      containers:
        - name: litestream
          image: litestream/litestream:0.3
          args: ["replicate"]
          volumeMounts:
            - name: litestream-configmap
              mountPath: /etc/litestream.yml
              subPath: litestream.yml
            - name: entertainment-content
              mountPath: /calibre-library
              subPath: media/calibre/
            - name: calibre-config
              mountPath: /config
          resources:
            requests:
              memory: 128Mi
              cpu: 125m
            limits:
              memory: 256Mi
              cpu: 250m
          ports:
            - name: metrics
              containerPort: 9090
              protocol: TCP
        - name: calibre
          image: docker.io/crocodilestick/calibre-web-automated:V2.1.2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
            limits:
              memory: 1Gi
              cpu: "1"
          ports:
            - containerPort: 8083
              protocol: TCP
              name: http
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: calibre-config
              mountPath: /config
            - name: calibre-ingest
              mountPath: /cwa-book-ingest
            - name: entertainment-content
              mountPath: /calibre-library
              subPath: media/calibre/
