k8s/entertainment/calibre/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: entertainment
spec:
  selector:
    app: calibre
  ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
      name: http
  type: LoadBalancer
  loadBalancerIP: 10.0.69.1
